# AutomatizadorOrdensDeCompras

./: .copilot_.md  .copilot_memory.md  .dockerignore  .env  .env.example  .gitignore  CHANGELOG_RAG_AND_IMPROVEMENTS.md  CORRECAO_LICENSE_FILE.md  CORRECAO_LIGHTGBM_PYTHON_PACKAGE.md  CORREÇÕES_CHROMADB.md  DOCKERFILE_FINAL_CORRIGIDO.md  DOCUMENTACAO_COMPLETA.md  Dockerfile  Dockerfile.lightgbm-cuda  MELHORIAS_MODELO_v3.0.txt  ML_PIPELINE_COMPLETO.md  PROJECT_STRUCTURE.md  PlanoAção.md  README.md  RESUMO_SESSAO.md  alembic.ini  conftest.py  docker-compose.production.yml  docker-compose.test.yml  docker-compose.yml  fix_embeddings.py  models.txt  pyproject.toml  requirements.txt  resultado.md  script_reindex.py  test_agno_corrections.py  train_advanced_models.py
FrontEnd/: Dockerfile  Dockerfile.test  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts  vitest.config.ts
_obsolete/: README_REFATORACAO.md  requirements.txt.old
app/: __init__.py  main.py
config/: prometheus.yml
data/: products_seed.csv  sample_vendas.csv
docs/: AGENT_TOOLS.md  AGNO_2.1.3_MIGRATION_COMPLETE.md  AGNO_API_CORRECTIONS.md  AGNO_ARCHITECTURE.md  ATUALIZACAO_GEMINI_2.5.md  CHANGELOG_AGENTS.md  CHANGELOG_CHAT_FIXES.md  CHANGELOG_HYBRID.md  CHAT_ARCHITECTURE.md  CHAT_FLOW_DIAGRAM.md  CORRECAO_FINAL_NLU.md  CRITICAL_FIX_GEMINI.md  DIAGNOSTICO_PRODUTO_NAO_ENCONTRADO.md  DOCKER_SCRIPTS_BANCO.md  EMBEDDINGS_FIX_REPORT.md  FINAL_AUDIT_REPORT.md  FIX_AGENTES_NAO_BUSCAM_DADOS.md  FIX_ASYNC_RESULT_DISPLAY.md  FIX_CELERY_AGENT_TASK.md  FIX_DATA_TOO_LONG.md  README.md  (+26 more)
(+3732 files in other folders)
